syntax = "proto3";

package com.example.grpcbook;

option java_multiple_files = true;
option java_package = "com.example.grpcbook.generated";

// 도서 정보
message Book {
    string id = 1;
    string title = 2;
    string author = 3;
    string category = 4;
    bool available = 5;
}

// 도서 생성 요청
message CreateBookRequest {
    string title = 1;
    string author = 2;
    string category = 3;
}

// 도서 조회 요청
message GetBookRequest {
    string id = 1;
}

// 도서 목록 조회 요청
message ListBooksRequest {
    string category = 1; // 선택적 카테고리 필터
    int32 page = 2;
    int32 size = 3;
}

// 도서 목록 응답
message ListBooksResponse {
    repeated Book books = 1;
    int32 total_count = 2;
}

// 도서 업데이트 요청
message UpdateBookRequest {
    string id = 1;
    string title = 2;
    string author = 3;
    string category = 4;
}

// 도서 삭제 요청
message DeleteBookRequest {
    string id = 1;
}

// 도서 삭제 응답
message DeleteBookResponse {
    bool success = 1;
}

// 도서 대여 요청
message BorrowBookRequest {
    string id = 1;
    string user_id = 2;
}

// 도서 반납 요청
message ReturnBookRequest {
    string id = 1;
    string user_id = 2;
}

// 도서 상태 모니터링 요청
message WatchBookRequest {
    string id = 1;
}

// 도서 응답
message BookResponse {
    Book book = 1;
}

// 도서 서비스
service BookService {
    // 도서 등록
    rpc CreateBook(CreateBookRequest) returns (BookResponse);

    // 도서 정보 조회
    rpc GetBook(GetBookRequest) returns (BookResponse);

    // 도서 목록 조회
    rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);

    // 도서 정보 업데이트
    rpc UpdateBook(UpdateBookRequest) returns (BookResponse);

    // 도서 삭제
    rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);

    // 도서 대여
    rpc BorrowBook(BorrowBookRequest) returns (BookResponse);

    // 도서 반납
    rpc ReturnBook(ReturnBookRequest) returns (BookResponse);

    // 실시간 도서 상태 모니터링 (서버 스트리밍)
    rpc WatchBookStatus(WatchBookRequest) returns (stream BookResponse);
}